# prod-2025-final

./: .gitlab-ci.yml  README.md  compose.yml  credentials.md  openapi.json  routes.md  terms.md
backend/: Cargo.toml  Dockerfile  Makefile  README.md
backend/.sqlx/: query-0001a7342de907c14fbbcf2c2a123c0070c3b673e68d2fb85d3f8d42c1a370ba.json  query-04f375514f7a3137c01991a27e18336d25bf2bb716dc0ef33295401ab9c63c26.json  query-0bb879171f3657b8ede2b3804b7e8a5a8f5e8001a4ceb0cc97f9db38d8de0ccb.json  query-1092514c19bc400543daff3d7abf378053b82262e04e7fcd58418df0ab6a7083.json  query-1706ef364bbe6ca2a5480a2369c2c586db4a77196f66f6cdbfef10bf8456900a.json  query-18addbc6cf2d0453f79154930087173a8f73453ad2092772a7a287d4e75a99e0.json  query-1d12079fbb45bf6b3247ed4d20cc14686d9cd2920da09ef979fc4d572c227983.json  query-1ddd8b4bf90a2194c579f2b2917cb4c4461ec006aceff8b7f8f7dc58787e937c.json  query-1df45150262c7a3dfa8315f11e8984acefb6414c5b483ef1e8f22d6b21dd1101.json  query-1ebb157a0f13a19b07efcb6f7c68cd95ef3dbc2bfef7182fbcf306a9fa4774e9.json  query-22eeb62275f09764a8f5f24c2c78907adf7d179e04a6f3418e27842f7a27770b.json  query-2daff3c7a672294585e3b425e5ad3dd18ac68f84f928da4f83d6956e31243d43.json  query-2ea8fc24c8c9537a63e36e48cd94f050802a26706e72badd1d4d07dabfbdeaf9.json  query-32485bb14d8df3036879bb7e9f16e9db153ce49a144e6de9471d10aaf47367f3.json  query-34ae6f60ea01623f1661bb434d25f75706b8cdc9b29e392ff87cdbc4dd246b43.json  query-38fe8198685f19c998c4e504fc977293cf73211bca9ad4be243cb827f439f41d.json  query-41b9f5378e71e81b71c2c3d09e92474e255949ec0f3a379dfee96a6379676908.json  query-45c90854c20b13dff360a5fcc163f271e41d71bfe9446eeb06050e7188427505.json  query-46997f8bc443426331a676c9141b5ebb6de79da00ca805279c321ad94391544c.json  query-46d7fc22b8127459e6ca8b3777acbd01a3430c2d5e9b0822a74978aec31f7b57.json  query-47c891fb1b116ae0d2a72f40dd22e6dd588649b14e8fed51eb78ea0e66e5fc06.json  query-4e1d1ff696d0c08aed1f01f8f88140151d66cc2d30f7e82c36e65792ac6e4ad4.json  query-5ab70b8b92c52699c101b83b94f358762a35a3a65b8a6fcdd99187dfe4ad6452.json  query-61f896f7ebe6c3dbb04f67692c500ce8bd9ca5628b4cbc1abc75bc33596929a8.json  (+34 more)
(+253 files in other folders)
