[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.15.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true

