[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["multipart"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
rust-argon2 = "2.1.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
minio = { git = "https://github.com/minio/minio-rs", version = "0.2.0-alpha", rev = "b19513c90fa44724c4bd0ce328a0509c91652fae" }
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "runtime-tokio", "chrono"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.15.1", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.8.5"
lazy_static = "1.5.0"
tonic = "0.12.3"
axum-macros = "0.5.0"
regex = "1.11.1"
once_cell = "1.20.3"
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "non_strict_integers", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
bytes = "1.10.0"
byteorder = "1.5.0"
tower-http = { version = "0.6.2", features = ["cors"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true

